[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-history"
version = "0.1.0"
description = "Local Codex history viewer and manager"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "liiilhhh" }
]
license = { text = "MIT" }
classifiers = [
  "Environment :: Console",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://example.com/codex-history"

[project.scripts]
codex-history = "codex_history.cli:main"
cswitch = "codex_history.cli:main_cswitch"
codex-profiles = "codex_history.cli:main_profiles"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
